<resources>
    <string name="app_name">Subasta</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Subasta del pueblo</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Ofertantes</string>
    <string name="menu_gallery">Celulares</string>
    <string name="menu_slideshow">Ofertas</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_test">Test</string>
    <string name="listOfer">Ofertantes</string>
    <string name="menu_send">Send</string>
    <string name="tv1">Ofertantes</string>
    <string name="tp1">Ingrese nombres</string>
    <string name="tp2">Ingrese cédula</string>
    <string name="tp3">Ingrese deposito</string>
    <string name="bt1">Guardar</string>
    <string name="hello_blank_fragment">Holaaaaaaaa</string>
    <string name="listas">Listar</string>
    <string name="deposito">Deposito</string>
    <string name="cedula">Cédula</string>
    <string name="nombre">Nombre</string>
    <string name="todo">TODO</string>
    <string name="cel">Celulares</string>
    <string name="id">ID de celular</string>
    <string name="marca">Marca</string>
    <string name="modelo">Modelo</string>
    <string name="gama">Gama</string>
    <string name="costo">Costo base</string>
    <string-array name="gamas">
        <item>Baja</item>
        <item>Media</item>
        <item>Alta</item>
    </string-array>

</resources>
