<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragOfertante">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/side_nav_bar">


        <Button
            android:id="@+id/bt1"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="172dp"
            android:layout_height="40dp"
            android:layout_marginStart="161dp"
            android:layout_marginLeft="161dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="161dp"
            android:layout_marginRight="161dp"
            android:layout_marginBottom="88dp"
            android:background="#3F51B5"
            android:drawableStart="@drawable/content_save"
            android:drawableLeft="@drawable/content_save"
            android:text="@string/bt1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etDeposito" />

        <EditText
            android:id="@+id/etNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="98dp"
            android:layout_marginLeft="98dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="98dp"
            android:layout_marginRight="98dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:hint="@string/tp1"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColorHighlight="#198A7F"
            android:textColorLink="#FFFFFF"
            android:textCursorDrawable="@color/colorPrimary"
            app:layout_constraintBottom_toTopOf="@+id/etCedula"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/etCedula"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="98dp"
            android:layout_marginLeft="98dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="98dp"
            android:layout_marginRight="98dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:hint="@string/tp2"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textColorHighlight="#145A54"
            android:textCursorDrawable="@color/colorPrimary"
            app:layout_constraintBottom_toTopOf="@+id/etDeposito"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etNombre"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/etDeposito"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="98dp"
            android:layout_marginLeft="98dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="98dp"
            android:layout_marginRight="98dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:hint="@string/tp3"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:textColorHighlight="#13534D"
            android:textCursorDrawable="@color/colorPrimary"
            app:layout_constraintBottom_toTopOf="@+id/bt1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etCedula"
            tools:targetApi="o" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="118dp"
            android:layout_height="32dp"
            android:layout_marginStart="152dp"
            android:layout_marginLeft="152dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="152dp"
            android:layout_marginRight="152dp"
            android:layout_marginBottom="8dp"
            android:text="@string/tv1"
            android:textColor="#041149"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/etNombre"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.49" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>